Small fixes regarding semantics in HTML, dark mode

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
   background-color: #f0ede5;
   text-align: center;
   padding: 0.5rem 0;
+  align-items: center;
 }
 
 .dark-mode {
@@ -26,17 +27,17 @@ header {
 .dark-mode .login-box,
 .dark-mode .product,
 .dark-mode header,
-.dark-mode footer {
+.dark-mode footer,
+.dark-mode h1,
+.dark-mode close {
   background-color: #333;
   color: white;
-  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
 }
 
 .dark-mode a,
 .dark-mode button {
-  background-color: white;
-  color: black;
-  border: 1px solid white;
+  background-color: #333;
+  color: #f0ede5;
 }
 
 .dark-mode .nav-links ul li a {
@@ -122,9 +123,9 @@ header {
     font-size: 10vh;
   }
 
-  .nav-links ul{
-  display: flex;
-  flex-direction: column;
+  .nav-links ul {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -205,7 +206,20 @@ input:focus {
   font-size: 1rem;
 }
 
-.radio-group,
+.radio-group {
+  display: flex;
+  gap: 15px;
+  width: 100%;
+  padding-top: 5px;
+  justify-content: center;
+}
+
+.radio-option {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .checkbox-group {
   display: flex;
   align-items: center;
@@ -295,6 +309,12 @@ form {
   transition: border 0.3s ease;
 }
 
+.form-group membership.type {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .form-group input[type="radio"],
 .form-group input[type="checkbox"] {
   margin: 1px;
@@ -307,7 +327,6 @@ form {
   text-align: left;
   margin-top: 1rem;
   font-weight: 600;
-  color: #222;
   font-size: 1.1rem;
 }
 
@@ -411,8 +430,6 @@ h1 span {
   width: 100%;
   object-fit: cover;
 }
-
-
 
 .btn {
   background-color: #d8d1c8;
@@ -538,7 +555,6 @@ footer nav ul li a:hover {
     max-height: 40vh;
   }
 
-@media (max-width: 768px) {
   h1 {
     font-size: 2.5rem;
   }
@@ -549,7 +565,7 @@ footer nav ul li a:hover {
   }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 769px) and (max-width: 1024px) {
   .product-grid {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -559,9 +575,7 @@ footer nav ul li a:hover {
     width: 100%;
     object-fit: cover;
   }
-}
 
-@media (max-width: 1024px) {
   nav {
     display: none;
   }
@@ -575,7 +589,17 @@ footer nav ul li a:hover {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1025px) {
+  .product-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .product img {
+    max-height: 500px;
+    width: 100%;
+    object-fit: cover;
+  }
+
   nav {
     display: flex;
   }
